import net.ltgt.gradle.errorprone.CheckSeverity
import org.testcontainers.containers.PostgreSQLContainer

buildscript {
	dependencies {
		classpath 'org.testcontainers:testcontainers-postgresql:2.0.3'
		classpath 'org.postgresql:postgresql:42.7.10'
		classpath 'org.liquibase:liquibase-core:5.0.1'
	}

	configurations.all {
		resolutionStrategy {
			// TODO: Temporary fix for Jackson 2 dependency issue with restdocs-api-spec
			// See https://github.com/ePages-de/restdocs-api-spec/issues/293
			force("org.springframework.boot:spring-boot-jackson2:4.0.3")
		}
	}
}

plugins {
	id 'java'
	id 'org.springframework.boot' version '4.0.1'
	id 'io.spring.dependency-management' version '1.1.7'
	id 'com.diffplug.spotless' version '8.1.0'
	id 'net.ltgt.errorprone' version '4.3.0'
	id 'org.asciidoctor.jvm.convert' version '4.0.5'
	id 'com.epages.restdocs-api-spec' version '0.20.0'
	id 'org.jooq.jooq-codegen-gradle' version '3.19.30'
	id 'org.liquibase.gradle' version '3.1.0'
}

group = 'com.skkil'
version = '0.0.1-SNAPSHOT'
description = ''

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(25)
	}
}

sourceSets {
	main {
		java {
			srcDirs += 'build/generated/jooq'
			exclude '**/recruitment/**'
			exclude '**/provider/**'
			exclude '**/review/**'
			exclude '**/experience/**'
			exclude '**/message/**'
			exclude '**/notification/**'
		}
	}
	test {
		java {
			exclude '**/recruitment/**'
			exclude '**/provider/**'
			exclude '**/review/**'
			exclude '**/experience/**'
		}
	}
}

bootJar {
	enabled = true
}

jar {
	enabled = false
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

ext {
	set('snippetsDir', file("build/generated-snippets"))
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-jooq'
	implementation 'org.springframework.boot:spring-boot-starter-websocket'
	implementation 'org.springframework.boot:spring-boot-starter-liquibase'
	implementation 'org.springframework.boot:spring-boot-starter-restclient'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-security-oauth2-client'
	implementation 'org.springframework.boot:spring-boot-starter-session-jdbc'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-webmvc'
	implementation 'org.springframework.boot:spring-boot-starter-websocket'
	implementation 'org.springframework.security:spring-security-messaging'
	implementation 'org.springframework.boot:spring-boot-starter-actuator'
	implementation 'org.springframework.boot:spring-boot-starter-opentelemetry'
	implementation "org.springframework.boot:spring-boot-starter-log4j2"
	implementation 'org.springframework.boot:spring-boot-starter-mail'
	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
	implementation "io.opentelemetry.instrumentation:opentelemetry-log4j-appender-2.17:2.21.0-alpha"
	implementation platform("org.springframework.ai:spring-ai-bom:2.0.0-M3")
	implementation 'org.springframework.ai:spring-ai-starter-model-ollama'
	implementation 'org.springframework.ai:spring-ai-starter-vector-store-pgvector'
	implementation 'org.bouncycastle:bcprov-jdk18on:1.82'
	implementation 'com.bucket4j:bucket4j_jdk17-postgresql:8.18.0'
	implementation platform('io.awspring.cloud:spring-cloud-aws-dependencies:4.0.0-RC1')
	implementation 'io.awspring.cloud:spring-cloud-aws-starter-s3'
	implementation 'org.mapstruct:mapstruct:1.6.3'
	implementation 'io.micrometer:micrometer-registry-prometheus'
	implementation 'net.datafaker:datafaker:2.7.0'
	compileOnly 'org.projectlombok:lombok'
	developmentOnly 'org.springframework.boot:spring-boot-devtools'
	developmentOnly 'org.springframework.boot:spring-boot-docker-compose'
	runtimeOnly 'org.postgresql:postgresql'
	runtimeOnly 'io.micrometer:micrometer-registry-otlp'
	annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
	annotationProcessor 'org.projectlombok:lombok'
	annotationProcessor 'org.mapstruct:mapstruct-processor:1.6.3'
	testImplementation 'org.springframework.boot:spring-boot-restdocs'
	testImplementation 'org.springframework.restdocs:spring-restdocs-mockmvc'
	testImplementation 'org.springframework.boot:spring-boot-starter-data-jpa-test'
	testImplementation 'org.springframework.boot:spring-boot-starter-jooq-test'
	testImplementation 'org.springframework.boot:spring-boot-starter-liquibase-test'
	testImplementation 'org.springframework.boot:spring-boot-starter-restclient-test'
	testImplementation 'org.springframework.boot:spring-boot-starter-security-oauth2-client-test'
	testImplementation 'org.springframework.boot:spring-boot-starter-security-test'
	testImplementation 'org.springframework.boot:spring-boot-starter-session-jdbc-test'
	testImplementation 'org.springframework.boot:spring-boot-starter-validation-test'
	testImplementation 'org.springframework.boot:spring-boot-starter-webmvc-test'
	testImplementation 'org.springframework.boot:spring-boot-starter-websocket-test'
	testImplementation 'org.springframework.boot:spring-boot-testcontainers'
	testImplementation 'org.testcontainers:testcontainers-junit-jupiter'
	testImplementation 'org.testcontainers:testcontainers-postgresql'
	testImplementation 'org.testcontainers:testcontainers-localstack'
	testImplementation 'io.awspring.cloud:spring-cloud-aws-testcontainers'
	testImplementation 'com.epages:restdocs-api-spec-mockmvc:0.20.0'
	testImplementation 'org.springframework.boot:spring-boot-starter-actuator-test'
	testImplementation 'org.springframework.boot:spring-boot-starter-opentelemetry-test'
	testImplementation 'org.springframework.boot:spring-boot-starter-mail-test'
	testImplementation 'org.springframework.boot:spring-boot-starter-thymeleaf-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
	errorprone 'com.uber.nullaway:nullaway:0.12.12'
	errorprone 'com.google.errorprone:error_prone_core:2.42.0'
	jooqCodegen 'org.postgresql:postgresql'
	jooqCodegen 'org.testcontainers:testcontainers-postgresql'
	liquibaseRuntime 'org.liquibase:liquibase-core'
	liquibaseRuntime 'info.picocli:picocli:4.7.7'
	liquibaseRuntime 'org.postgresql:postgresql'
	liquibaseRuntime 'org.testcontainers:testcontainers-postgresql'

	modules {
		module("org.springframework.boot:spring-boot-starter-logging") {
			replacedBy("org.springframework.boot:spring-boot-starter-log4j2", "Use Log4j2 instead of Logback")
		}
	}
}

tasks.withType(JavaCompile) {
	options.compilerArgs += [
		'-Xlint:rawtypes',
		'-Xlint:unchecked',
		'-Werror',
		'-parameters',
	]

	options.errorprone {
		disableWarningsInGeneratedCode = true
		check('WildcardImport', CheckSeverity.ERROR)
		check('MissingBraces', CheckSeverity.ERROR)
		check('TypeToString', CheckSeverity.ERROR)
		check('SymbolToString', CheckSeverity.ERROR)
		check('MultipleTopLevelClasses', CheckSeverity.ERROR)
		check('ClassName', CheckSeverity.ERROR)
		check('PackageLocation', CheckSeverity.ERROR)
		check('UnnecessaryAnonymousClass', CheckSeverity.ERROR)
		check('UnusedException', CheckSeverity.ERROR)
		check('UnnecessaryFinal', CheckSeverity.ERROR)
		check('PreferredInterfaceType', CheckSeverity.ERROR)
		check('AnnotationPosition', CheckSeverity.ERROR)
		check('VoidMissingNullable', CheckSeverity.ERROR)
		check('EqualsMissingNullable', CheckSeverity.ERROR)

		check('NullAway', CheckSeverity.ERROR)
		option('NullAway:AnnotatedPackages', 'com.starter')
	}

	if (name.toLowerCase().contains('test')) {
		options.errorprone {
			disable('NullAway')
		}
	}
}

tasks.named('compileJava') {
	mustRunAfter 'jooqCodegen'
}

tasks.named('build') {
	dependsOn('jooqCodegen')
	dependsOn('spotlessApply')
	dependsOn('openapi3')

	doLast {
		copy {
			from(file("build/api-spec"))
			into(file("../../docs/api"))
		}
	}
}

tasks.named('test') {
	outputs.dir snippetsDir
	useJUnitPlatform()
}


tasks.named('asciidoctor') {
	inputs.dir snippetsDir
	dependsOn test
}


spotless {
	java {
		targetExclude("**/build/generated/**")

		importOrder()
		removeUnusedImports()
		forbidWildcardImports()
		formatAnnotations()
		googleJavaFormat('1.32.0')
	}

	groovyGradle {
		target '**/*.gradle'
		greclipse()
	}
}

openapi3 {
	server = ''
	title = 'sync'
	description = ''
	version = '0.0.1'
	format = 'yaml'
}

liquibase {
	activities {
		jooq {
			changelogFile 'src/main/resources/db/changelog/db.changelog-master.yaml'
		}
	}
}

jooq {
	configuration {
		logging = org.jooq.meta.jaxb.Logging.WARN
		generator {
			database {
				name = "org.jooq.meta.postgres.PostgresDatabase"
				inputSchema = "public"
				excludes = "databasechangelog.*"
			}
			target {
				packageName = "com.skkil.sync.jooq"
				directory = "build/generated/jooq"
			}
		}
	}
}

def db = new PostgreSQLContainer('pgvector/pgvector:pg18')

tasks.register("startDatabase") {
	doLast {
		db.start()

		project.ext.dbUrl = db.getJdbcUrl()
		project.ext.dbUsername = db.getUsername()
		project.ext.dbPassword = db.getPassword()
		project.ext.dbDriver = db.getDriverClassName()
	}
}

tasks.register("stopDatabase") {
	doLast {
		db.stop()
	}
}

tasks.named('update') {
	dependsOn 'startDatabase'

	doFirst {
		liquibase.activities {
			jooq {
				url project.ext.dbUrl
				username project.ext.dbUsername
				password project.ext.dbPassword
				driver project.ext.dbDriver
			}
		}
	}
}

tasks.named('jooqCodegen') {
	dependsOn 'update'
	mustRunAfter 'spotlessApply'

	inputs.dir 'src/main/resources/db/changelog'
	outputs.dir 'build/generated/jooq'
	outputs.cacheIf { true }

	doFirst {
		jooq {
			configuration {
				generator {
					jdbc {
						url = project.ext.dbUrl
						username = project.ext.dbUsername
						password = project.ext.dbPassword
						driver = project.ext.dbDriver
					}
				}
			}
		}
	}

	finalizedBy 'stopDatabase'
}
